--- a/frontend/src/pages/VisitsBrowser/VisitsBrowser.module.scss
+++ b/frontend/src/pages/VisitsBrowser/VisitsBrowser.module.scss
@@ -21,12 +21,14 @@
   background-color: $border-color;
   cursor: col-resize;
   flex-shrink: 0;
-  transition: background-color 0.2s;
+  transition: background-color 0.2s, box-shadow 0.2s;
   user-select: none;
+  box-shadow: inset 1px 0 2px rgba(0, 0, 0, 0.2), inset -1px 0 2px rgba(0, 0, 0, 0.2);
 
   &:hover,
   &.resizerActive {
     background-color: $accent;
+    box-shadow: inset 1px 0 3px rgba(0, 0, 0, 0.3), inset -1px 0 3px rgba(0, 0, 0, 0.3);
   }
 }
 
